@@ -128,9 +128,7 @@ User-defined types can be created which can augment the bind parameter and resul
         def copy(self):
             return MyType(self.impl.length)
 
-Note that the "old" way to process bind parameters and result values, the `convert_bind_param()` and `convert_result_value()` methods, are still available.  The downside of these is that when using a type which already processes data such as the `Unicode` type, you need to call the superclass version of these methods directly.  Using `process_bind_param()` and `process_result_value()`, user-defined code can return and receive the desired Python data directly.
-
-As of version 0.4.2, `TypeDecorator` should generally be used for any user-defined type which redefines the behavior of another type, including other `TypeDecorator` subclasses such as `PickleType`, and the new `process_...()` methods described above should be used.  
+`TypeDecorator` should generally be used for any user-defined type which redefines the behavior of another type, including other `TypeDecorator` subclasses such as `PickleType`, and the new `process_...()` methods described above should be used.
 
 To build a type object from scratch, which will not have a corresponding database-specific implementation, subclass `TypeEngine`:
 
@@ -140,13 +138,19 @@ To build a type object from scratch, which will not have a corresponding databas
     class MyType(types.TypeEngine):
         def __init__(self, precision = 8):
             self.precision = precision
-            
+
         def get_col_spec(self):
             return "MYTYPE(%s)" % self.precision
-            
-        def convert_bind_param(self, value, dialect):
-            return value
-            
+
+        def bind_processor(self, dialect):
+            def process(value):
+                return value
+            return process
+        def result_processor(self, dialect):
+            def process(value):
+                return value
+            return process
+
         def convert_result_value(self, value, dialect):
             return value
 
